--- a/targets/android/templates/local.properties
+++ b/targets/android/templates/local.properties
@@ -7,4 +7,6 @@
 # location of the SDK. This is only used by Ant
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=${ANDROID_PATH}
+
+#ANDROID_SDK_DIR is same as ANDROID_PATH except with '\' changed to '\\' - ant or android or someone seems to require this.
+sdk.dir=${ANDROID_SDK_DIR}
