--- a/monk.app/Contents/Info.plist
+++ b/monk.app/Contents/Info.plist
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>monkey</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Monkey source file</string>
+			<key>CFBundleTypeIconFile</key>
+			<string>monk</string>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>monk</string>
 	<key>CFBundleIconFile</key>
