--- a/targets/glfw/vc2010/MonkeyGame.vcxproj
+++ b/targets/glfw/vc2010/MonkeyGame.vcxproj
@@ -60,6 +60,7 @@
       <FunctionLevelLinking>false</FunctionLevelLinking>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -81,6 +82,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -116,6 +118,7 @@
     <ClCompile Include="..\glfw\lib\window.c" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\stb\stb_image.c" />
+    <ClCompile Include="..\stb\stb_vorbis.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\glfw\lib\internal.h" />
