Add UIStatusBarHidden=yes to the Info.plist

--- a/targets/ios/MonkeyGame-Info.plist
+++ b/targets/ios/MonkeyGame-Info.plist
@@ -33,5 +33,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
